--- a/3-ControlStructures.ipynb
+++ b/3-ControlStructures.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-ControlStructures.ipynb) >"
+    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-Functions.ipynb) >"
    ]
   },
   {
@@ -787,7 +787,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-ControlStructures.ipynb) >"
+    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-Functions.ipynb) >"
    ]
   },
   {
