--- a/4-Functions.ipynb
+++ b/4-Functions.ipynb
@@ -14,7 +14,7 @@
     "# 4. Functions\n",
     "#### 4.1 Introduction\n",
     "\n",
-    "A functions takes one or more inputs, performs some operations on these inputs, and returns a result. This is depicted in the following diagram:\n",
+    "A function takes one or more inputs, performs some operations on these inputs, and returns a result. This is depicted in the following diagram:\n",
     "\n",
     "<center><img src=\"figures/function.png\" width=\"200\"/></center>\n",
     "\n",
