--- a/1-TheBasics.ipynb
+++ b/1-TheBasics.ipynb
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,8 +711,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises\n",
-    "### Assignment 1\n",
+    "## 1.7 Exercises\n",
+    "**Exercise 1**\n",
     "\n",
     "Type in the cell below an expression to find out how many seconds there are in a 365-day year."
    ]
@@ -730,9 +730,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 2\n",
+    "**Exercise 2**\n",
     "\n",
-    "The Earth can be approximated as a sphere with a radius of 6370 km. Use the cell below to find out the volume of such a shape in **cubic meters** ($m^3$)."
+    "Compute the following expression:\n",
+    "\n",
+    "$$\\frac{(6 + 4 \\cdot 2)}{(1 - 5)^3}$$\n"
    ]
   },
   {
@@ -741,18 +743,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hint: the volume V of a sphere with radius r is given by V = 4/3 * pi * r**3\n"
+    "# Hint: you should get -1/4 = -0.25 as a result\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 3\n",
+    "**Exercise 3**\n",
     "\n",
-    "Get the answer of the following expression, using the cell below:\n",
-    "\n",
-    "$$\\frac{1}{2}+\\frac{\\frac{1}{3}}{\\frac{1}{4}+\\frac{1}{5}}$$"
+    "Given a time in seconds, type in the cell below an expression to convert this time into hours. For example, 7865 seconds is 2 hours."
    ]
   },
   {
@@ -761,7 +761,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Hint: you should get approximately 1.24\n"
+    "time = 7265\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, convert the time also into minutes and seconds. For example, 7865 seconds is 2 hours, 11 minutes and 5 seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 4**\n",
+    "\n",
+    "The Earth can be approximated as a sphere with a radius of 6370 km. Use the cell below to find out the volume of such a shape in **cubic meters** ($m^3$). **Hint**: the volume $V$ of a sphere with radius $r$ is given by $V = \\frac{4}{3}\\pi r^3$. To get the value of $\\pi$ use `math.pi` after importing the `math` module."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 5**\n",
+    "\n",
+    "A building at a distance of 115 m is observed under an angle of 30 degrees. Use the cell below to calculate the height $H$ of the building. **Hint**: convert the angle in degrees to an angle in radians using the `radians()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n"
    ]
   },
   {
@@ -770,11 +821,6 @@
    "source": [
     "< [Contents](0-Contents.ipynb) | [2 Datatypes](2-BasicDatatypes.ipynb) >"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -793,7 +839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
