--- a/2-BasicDatatypes.ipynb
+++ b/2-BasicDatatypes.ipynb
@@ -56,60 +56,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This is a string with 7 words!'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"This is a string with 7 words!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'9876'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"9876\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'3.14159'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"3.14159\""
    ]
@@ -125,20 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(\"9876\")"
    ]
@@ -152,60 +108,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(9876)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "float"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(3.14159)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "bool"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "type(False)"
    ]
@@ -527,7 +450,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we see that `[4:8]` selects characters with indices 4, 5, 6, and 7 which is \"efgh\". "
+    "Here we see that `[4:8]` selects characters with indices 4, 5, 6, and 7 which is `efgh`. "
    ]
   },
   {
@@ -552,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With `[4:]` we start with index 4 until the end of the string, which results in \"efghij\"."
+    "With `[4:]` we start with index 4 until the end of the string, which results in `efghij`."
    ]
   },
   {
@@ -590,9 +513,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 1\n",
+    "### Exercise 1\n",
     "\n",
-    "Write code below (replace the ... in the last command) to select the **second word** of the sentence using the correct **range**."
+    "Execute the code cell below to define and print the variable `sentence1`:"
    ]
   },
   {
@@ -605,15 +528,31 @@
     "word2 = \"morning\"\n",
     "word3 = \"to you too!\"\n",
     "sentence1 = word1 + \" \" + word2 + \" \" + word3\n",
-    "print(sentence1)\n",
-    "secondWord = sentence1[...]"
+    "print(sentence1)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Exercise 2\n",
+    "Replace the $\\ldots$ in the cell below to select the **second word** of the sentence using the correct **range**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "secondWord = sentence1[...]\n",
+    "print(secondWord)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 2\n",
     "Suppose you have a string `name` containing the name of a Python script. Use slicing/indexing to select the file name without the extension `.py`. Replace the dots between the brackets:"
    ]
   },
@@ -625,6 +564,95 @@
    "source": [
     "name = \"intro_to_Python.py\"\n",
     "filename = name[...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now suppose that the string `name` contains a file name with an extension that can be of **variable length**, e.g. `my_script.py`, `data.csv`, `presentation.pptx`, etc. Use slicing/indexing and other string methods to select the file name without the extension. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"intro_to_Python.ipynb\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exercise 3\n",
+    "\n",
+    "Consider the following string (typically part of a fasta file – the complete faste format is more extensive):\n",
+    "\n",
+    ">MCHU - Calmodulin - Human, rabbit, bovine, rat, chicken\n",
+    "MADQLTEEQIAEFKEAFSLFDKDGDGTITTKELGTVMRSLGQNPTEAELQDMINEVDADGNGTID\n",
+    "FPEFLTMMARKMKDTDSEEEIREAFRVFDKDGNGYISAAELRHVMTNLGEKLTDEEVDEMIREADIDGDGQVNYEEFVQMMTAK*\n",
+    "\n",
+    "Execute the code cell below to define and print the variable `fasta_str`:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fasta_str = \">MCHU - Calmodulin - Human, rabbit, bovine, rat, chicken\\nMADQLTEEQIAEFKEAFSLFDKDGDGTITTKELGTVMRSLGQNPTEAELQDMINEVDADGNGTID\\nFPEFLTMMARKMKDTDSEEEIREAFRVFDKDGNGYISAAELRHVMTNLGEKLTDEEVDEMIREADIDGDGQVNYEEFVQMMTAK*\"\n",
+    "print(fasta_str)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(a) The **first four** characters after the `>` encode the protein. Extract this code from the string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "code = fasta_str[...]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(b) Count the number of times the combination `AE` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) The part between the the first `-` and the second `-` describes the protein. Use string methods and slicing/indexing to extract this description. Note the space before and after the `-` characters.occurs in the protein string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
@@ -792,7 +820,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
