--- a/3-ControlStructures.ipynb
+++ b/3-ControlStructures.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-Functions.ipynb) >"
+    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-ControlStructures.ipynb) >"
    ]
   },
   {
@@ -248,9 +248,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.2.4 Exercises\n",
-    "\n",
+    "#### 3.2.4 Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Exercise 1**\n",
+    "\n",
+    "In the American grading system, grades are given as letters: A, B, C, D and F. The following table gives the correspondence between the American and the European grading system:\n",
+    "\n",
+    "| American Grade | European Grade |\n",
+    "|----------------|----------------|\n",
+    "| A              | 1              |\n",
+    "| B              | 2              |\n",
+    "| C              | 3              |\n",
+    "| D              | 4              |\n",
+    "| F              | 5              |\n",
+    "\n",
+    "Write a program that asks the user for an American grade and converts it to the corresponding European grade. The program should print the European grade."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "american_grade = input(\"Give the American grade (A, B, C, D or F): \")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2**\n",
+    "\n",
+    "Write a program that checks whether a given IBAN has a valid form:\n",
+    "* the length of the IBAN is 16 characters\n",
+    "* the first 2 characters are `BE`\n",
+    "* the next 14 characters are digits\n",
+    "\n",
+    "If the IBAN is valid, the program should print `valid IBAN`, otherwise `invalid IBAN`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IBAN = \"BE68539007547034\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 3**\n",
     "\n",
     "Consider a circle with radius 1 inside a square with side length 2. The circle is centered at the origin.\n",
     "\n",
@@ -260,6 +318,10 @@
     "* inside or on the circle (indicated with a red 1 in the figure above), or\n",
     "* outside the circle and inside or on the square (indicated with a red 2 in the figure above), or\n",
     "* outside the square (indicated with a red 3 in the figure above)\n",
+    "\n",
+    "The equation of the unit circle is\n",
+    "\n",
+    "$$x^2 + y^2 = 1$$\n",
     "\n",
     "The code cell below contains a template for this program:"
    ]
@@ -272,21 +334,8 @@
    "source": [
     "x = float(input(\"Give the value of the x coordinate: \"))\n",
     "y = float(input(\"Give the value of the y coordinate: \"))\n",
-    "..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise 2**\n",
     "\n",
-    "Write a program that asks the user for a Belgian IBAN. The program should check whether the IBAN has a valid form:\n",
-    "* the length of the IBAN is 16 characters\n",
-    "* the first 2 characters are `BE`\n",
-    "* the next 14 characters are digits\n",
-    "\n",
-    "If the IBAN is valid, the program should print `valid IBAN`, otherwise `invalid IBAN`.\n"
+    "\n"
    ]
   },
   {
@@ -373,7 +422,25 @@
     "\n",
     "**Exercise 1**\n",
     "\n",
-    "Write a program that repeatedly asks the user for a word. The program should print the word and it's length. The program should stop if the user enters `stop`. After ending the program, the program should print the words entered, separated by a comma."
+    "Write a program that finds the index of the first occurence of the letter `a` in a given string without using the string method `find()`. Make your program case insensitive, i.e. it should also find the letter `A`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"International\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2**\n",
+    "\n",
+    "Write a program that repeatedly asks the user for a word. The program should print the word and it's length. The program should stop if the user enters `stop`. "
    ]
   },
   {
@@ -387,16 +454,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 2**\n",
+    "Extend your program: after ending the program, the program should print the words entered, separated by a comma."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 3**\n",
     "\n",
     "Consider the following sequence:\n",
     "\n",
     "$$\n",
     "    x_{n+1} = \\left\\{ \\begin{array}{cl} \\dfrac{x_{n}}{2} & \\rm{ when } \\,\\, x_n\\,\\, \\rm{is\\,\\,even},   \\\\\n",
-    "             3 x_{n} + 1           & \\rm{ when } \\,\\, x_n\\,\\, \\rm{is\\,\\,uneven}.\\end{array}  \\right.\n",
+    "             3 x_{n} + 1           & \\rm{ when } \\,\\, x_n\\,\\, \\rm{is\\,\\,odd}.\\end{array}  \\right.\n",
     "$$\n",
     "\n",
-    "Collatz conjecture states that this sequence always converges to 1. Write a program that asks the user for a positive integer $x_0$. The program should print the sequence $x_0, \\, x_1, \\, x_2, \\,\\ldots$ until $x_n = 1$."
+    "Collatz conjecture states that this sequence always converges to 1. For example, starting from $x_0 = 6$ the sequence is:\n",
+    "\n",
+    "$$6 \\rightarrow 3 \\rightarrow 10 \\rightarrow 5 \\rightarrow 16 \\rightarrow 8 \\rightarrow 4 \\rightarrow 2 \\rightarrow 1$$\n",
+    "\n",
+    "Write a program that asks the user for a positive integer $x_0$. The program should print the sequence $x_0, \\, x_1, \\, x_2, \\,\\ldots$ until $x_n = 1$."
    ]
   },
   {
@@ -613,80 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3.4.3 Exercises\n",
-    "\n",
-    "**Exercise 1**\n",
-    "\n",
-    "The factorial of a positive integer $n$ is the product of all positive integers less than or equal to $n$.\n",
-    "\n",
-    "$$\n",
-    "    n! = n \\times (n-1) \\times (n-2) \\times \\ldots \\times 2 \\times 1\n",
-    "$$\n",
-    "\n",
-    "\n",
-    "The factorial of 0 is 1. Write a program that asks the user for a positive integer $n$. The program should print the factorial of $n$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Exercise 2**\n",
-    "\n",
-    "Consider a matrix $A$ of size $m \\times n$ and a matrix $B$ of size $n \\times k$. The product of $A$ and $B$ is a matrix $C$ of size $m \\times k$ where each element $c_{ij}$ is the dot product of the $i$-th row of $A$ and the $j$-th column of $B$.\n",
-    "\n",
-    "Each element $c_{ij}$ can be calculated as follows:\n",
-    "\n",
-    "$$\n",
-    "    c_{ij} = \\sum_{k=1}^{n} a_{ik} \\times b_{kj} = a_{i1} \\times b_{1j} + a_{i2} \\times b_{2j} + \\ldots + a_{in} \\times b_{nj}\n",
-    "$$\n",
-    "\n",
-    "Write a program that prints the product of two matrices $A$ and $B$. The matrices $A$ and $B$ are given by:\n",
-    "\n",
-    "$$\n",
-    "    A = \\begin{bmatrix}\n",
-    "        1 & 2 & 3 & 4 \\\\\n",
-    "        5 & 6 & 7 & 8  \\\\\n",
-    "        9 & 10 & 11 & 12 \n",
-    "        \\end{bmatrix} \n",
-    "        \\quad \\rm{and} \n",
-    "        \\quad\n",
-    "    B = \\begin{bmatrix}\n",
-    "        1 & 2 & 3 \\\\\n",
-    "        4 & 5 & 6 \\\\\n",
-    "        7 & 8 & 9 \\\\\n",
-    "        10 & 11 & 12 \n",
-    "        \\end{bmatrix}\n",
-    "$$\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "A = [[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]]\n",
-    "B = [[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]]\n",
-    "C = [[0, 0, 0], [0, 0, 0], [0, 0, 0], [0, 0, 0]]\n",
-    "\n",
-    "# calculate the matrix product C = A*B\n",
-    "\n",
-    "print(C)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3.5 The `break` statement\n",
+    "#### 3.4.3 The `break` statement\n",
     "\n",
     "The `break` statement is used to exit a loop prematurely. The `break` statement is placed inside the loop and stops the execution of the loop. The program continues with the first instruction after the loop. \n",
     "\n",
@@ -729,9 +741,72 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.6 Extra Exercises\n",
+    "#### 3.4.4 Exercises\n",
     "\n",
     "**Exercise 1**\n",
+    "\n",
+    "The factorial of a positive integer $n$ is the product of all positive integers less than or equal to $n$.\n",
+    "\n",
+    "$$\n",
+    "    n! = n \\times (n-1) \\times (n-2) \\times \\ldots \\times 2 \\times 1\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "The factorial of 0 is 1: $0! = 1$. Write a program that computes and prints the factorial of a given positive integer $n$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 7\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2**\n",
+    "\n",
+    "Compute the total number of vowels in a given string `s`. Make your program case insensitive, i.e. it should count both uppercase and lowercase vowels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"Programming is always FUN!\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 3 (challenging)**\n",
+    "\n",
+    "Find the longest substring of consecutive identical characters in a given string `s`. For example, in the string `s = \"Programming is always FUN!\"` the longest substring of consecutive identical characters is `mm`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"Programming is always FUN!\"\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 4**\n",
     "\n",
     "A number is\n",
     "*  a **perfect** number if the sum of its divisors (excluding the number itself) is equal to the number. For example, 6 is a perfect number because the sum of its divisors is 1 + 2 + 3 = 6,\n",
@@ -757,7 +832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Exercise 2**\n",
+    "**Exercise 5**\n",
     "\n",
     "A codon is a sequence of three nucleotides. There are 4 different nucleotides: `A`, `G`, `C` and `T`. The number of possible codons is $4^3 = 64$. \n",
     "\n",
@@ -787,7 +862,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-Functions.ipynb) >"
+    "< [2 Basic Datatypes](2-BasicDatatypes.ipynb) | [Contents](0-Contents.ipynb) | [4 Functions](4-ControlStructures.ipynb) >"
    ]
   },
   {
