--- a/7-FileI-O.ipynb
+++ b/7-FileI-O.ipynb
@@ -141,8 +141,10 @@
     "\n",
     "Reading data from a text files goes as follows:\n",
     "* open the file with the `open()` function\n",
-    "* read the data using the `read()`, `readline()`, or `readlines()` functions\n",
+    "* read the data using a a `for` loop, or the `read()`, `readline()`, or `readlines()` functions\n",
     "* close the file with the `close()` function\n",
+    "\n",
+    "##### 7.4.1 Opening files\n",
     "\n",
     "You can open a file using the `open()` function. The `open()` function takes two arguments:\n",
     "* the name of the file you want to open and\n",
@@ -151,14 +153,72 @@
     "    * `'w'` for writing, or\n",
     "    * `'a'` for appending. \n",
     "\n",
-    "The `open()` function returns a file object, which you can use to read or write data to the file. Python has several functions to read data from a file:\n",
+    "The `open()` function returns a file object, which you can use to read from or write data to the file. Using a `for` loop, you can iterate over the lines of the file. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A first example\n",
+    "\n",
+    "The file `data.txt` in the `files` directory. The file contains 5 lines of data. The following code reads the entire content of the file and prints it to the screen:\n",
+    "```python\n",
+    "f = open(\"files/data.txt\", \"r\")\n",
+    "for line in f:\n",
+    "    print(line)\n",
+    "f.close()\n",
+    "```\n",
+    "Execute the code cell below to see the output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"files/data.txt\", \"r\")\n",
+    "for line in f:\n",
+    "    print(line)\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The empty line between each line of output is due to the newline character `\\n` at the end of each line in the file. The `print()` function adds another newline character by default. To avoid this, you can use the `end` parameter of the `print()` function and set it to an empty string. Another way is to get rid of the newline character using the `strip()` function. The `strip()` function removes leading and trailing whitespaces (including the newline character) from a string.\n",
+    "\n",
+    "Execute the code cell below and compare the output with the previous one:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"files/data.txt\", \"r\")\n",
+    "for line in f:\n",
+    "    print(line.strip())\n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 7.4.2 Built-in functions to read data from a file\n",
+    "\n",
+    "Python has several functions to read data from a file:\n",
     "* `read()`: read the entire content of the file as a single string\n",
     "* `readline()`: read one line of the file\n",
     "* `readlines()`: read all lines of the file and store them in a list\n",
     "\n",
     "To close the file, you can use the function `close()`.\n",
     "\n",
-    "#### A First example\n",
+    "#### A second example\n",
     "\n",
     "Consider the file `data.txt` in the `files` directory. The file contains 5 lines of data. The following code reads the entire content of the file into a list: \n",
     "\n",
@@ -225,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A Second example\n",
+    "#### A third example\n",
     "The file `names.txt` in the folder `files` contains a list of names, one per line. The following code reads the entire content of the file into a list and removes the newline character:\n",
     "\n",
     "```python\n",
@@ -559,14 +619,49 @@
    "source": [
     "### 7.9 Exercises\n",
     "\n",
-    "#### **Exercise 1**\n",
+    "**Exercise 1**\n",
+    "\n",
+    "The text file `species.txt` in the `files` directory contains 7 scientific names, one per line. The scientific name of a species consists of two parts: the **genus** name and the **species** name. For example, `Bacillus anthracis`.\n",
+    "\n",
+    "Write a program that reads the content of the file, extracts the genus names, and writes them to a new file called `genus.txt`, one genus name per line. The content of the file `genus.txt` should look like this:\n",
+    "\n",
+    "```\n",
+    "Bacillus\n",
+    "Pseudomonas\n",
+    "Escherichia\n",
+    "Actinobacte\n",
+    "Moraxella\n",
+    "Alkanindiges\n",
+    "Perlucidibaca\n",
+    "```\n",
+    "\n",
+    "Part of the program is given below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open(\"files/species.txt\", \"r\")\n",
+    "for line in f:\n",
+    "    # add your code here\n",
+    "    \n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercise 2** (after Chapter 6)\n",
     "\n",
     "The file `numbers.txt` in the `files` directory contains 1000 throws of a die. Each throw is a number between 1 and 6. \n",
     "\n",
     "Write a function `count_freqs()` that reads the content of the file and calculates the frequency of each number. The function should return a dictionary `freqs_dict` with the numbers as keys and the frequencies as values. The dictionary should look like this:\n",
     "\n",
-    "`freqs_dict = {1: 182, 6: 159, 2: 158, 4: 168, 3: 167, 5: 166}`.\n",
-    "\n"
+    "`freqs_dict = {1: 182, 6: 159, 2: 158, 4: 168, 3: 167, 5: 166}`."
    ]
   },
   {
@@ -592,7 +687,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Exercise 2**\n",
+    "**Exercise 3** (after Chapter 5)\n",
     "\n",
     "The file `codontable.csv` in the `files` directory contains for all amino acids the following data:\n",
     "* the name of the amino acid\n",
@@ -625,7 +720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Exercise 3**\n",
+    "**Exercise 4**\n",
     "\n",
     "We continue with the data from the previous exercise. \n",
     "\n",
@@ -681,7 +776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
