--- a/2-BasicDatatypes.ipynb
+++ b/2-BasicDatatypes.ipynb
@@ -611,6 +611,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that, even though the string is defined as a single line, it is displayed as multiple lines. Try to explain this behaviour by looking at the string: do you notice any **special characters** in the string?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(a) The **first four** characters after the `>` encode the protein. Extract this code from the string."
    ]
   },
@@ -643,7 +657,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(c) The part between the the first `-` and the second `-` describes the protein. Use string methods and slicing/indexing to extract this description. Note the space before and after the `-` characters.occurs in the protein string."
+    "(c) The part between the the first `-` and the second `-` describes the protein. Use string methods and slicing/indexing to extract this description. Note the **space before and after** the `-` characters in the protein string."
    ]
   },
   {
