--- a/3-ControlStructures.ipynb
+++ b/3-ControlStructures.ipynb
@@ -440,7 +440,7 @@
    "source": [
     "**Exercise 2**\n",
     "\n",
-    "Write a program that repeatedly asks the user for a word. The program should print the word and it's length. The program should stop if the user enters `stop`. "
+    "Write a program that checks whether a given word is a palindrome (i.e. it reads the same forwards and backwards). An example of a palindrome is the word `reviver`. "
    ]
   },
   {
@@ -448,13 +448,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "word = \"reviver\"\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extend your program: after ending the program, the program should print the words entered, separated by a comma."
+    "**Extend** your program: ignore **spaces**, **punctuation** and **capitalization** in a given sentence."
    ]
   },
   {
@@ -462,7 +465,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sentence = \"A man, a plan, a canal, Panama!\"\n"
+   ]
   },
   {
    "cell_type": "markdown",
