--- a/1-TheBasics.ipynb
+++ b/1-TheBasics.ipynb
@@ -752,7 +752,7 @@
    "source": [
     "**Exercise 3**\n",
     "\n",
-    "Given a time in seconds, type in the cell below an expression to convert this time into hours. For example, 7865 seconds is 2 hours."
+    "Given a time in seconds, type in the cell below expressions to convert this time into hoursminutes and seconds. For example, 7865 seconds is 2 hours, 11 minutes and 5 seconds."
    ]
   },
   {
@@ -761,22 +761,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "time = 7265\n"
+    "time = 7865\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, convert the time also into minutes and seconds. For example, 7865 seconds is 2 hours, 11 minutes and 5 seconds."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
